Fixed layout issues, going to add compile and increment button

--- a/Src/styles.css
+++ b/Src/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 8px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
 }
 .container {
     height: 100%;
@@ -20,19 +21,37 @@ td {
     grid-template-columns: 50% 50%;
     grid-template-rows: 100%;
 }
-
 #instructionSet {
+    height: max-content;
+    width: 90%;
+
     margin: 0 auto;
     border-collapse: collapse;
     border: solid thin;
+    table-layout: fixed;
 }
 #editorWrapper {
     display: flex;
     justify-content: center;
 }
 #editor {
+    height: 100%;
+    width: 90%;
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
     resize: none;
 }
+@media (min-width:320px) and (max-width: 800px)  { 
+    #editorContainer {
+        grid-template-columns: 100%;
+        grid-template-rows: max-content 300px;
+        row-gap: 20px;
+    }
+}
+
 
 
 
@@ -50,26 +69,47 @@ td {
     justify-content: center;
 }
 #visual {
-    height: max-content;
+    height: min-content;
     width: 95%;
 
     display: grid;
     grid-template-columns: 55% 10% 35%;
     grid-template-rows: 100%;
 }
-#progress {
-    height: auto;
+
+#progressWrapper {
     width: 90%;
+
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: max-content auto;
+}
+#progressWrapper > h2 {
+    margin: 0;
+    margin-bottom: 10px;
+}
+#progress {
+    height: max-content;
+    width: 100%;
     margin: 0 auto;
 
     border-collapse: collapse;
     border: solid thin;
 }
+#progress .final {
+    background-color: rgba(0, 127, 0, 0.5);
+}
 
 @media (min-width:320px) and (max-width: 800px)  { 
     #internalsContainer {
         grid-template-columns: 100%;
-        grid-template-rows: 100% 100%;
+        grid-template-rows: max-content max-content;
+    }
+    #progressWrapper {
+        width: 100%;
+
+        margin-top: 20px;
+        margin-bottom: 200px;
     }
 }
 
